--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,5 +1,81 @@
-h1 {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
+
+.home-container {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    position: relative;
+}
+
+// ******** SLIDER **********
+home-slider {
+//!!!!  EMPTY YET
+}
+
+.slide1 {
+    background: url('../../assets/1.jpg');
+}
+
+.slide2{
+    background: url('../../assets/2.jpg');
+}
+
+.slide3{
+    background: url('../../assets/3.jpg');
+}
+
+.slide4{
+    background: url('../../assets/4.jpg');
+}
+.slide5 {
+    background: url('../../assets/5.jpg');
+}
+
+.size {
+    max-width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+
+    .carousel-caption {
+        color: #ffffff;
+        padding-bottom: 10%;
+        margin: auto;
+        position: static;
+        cursor: pointer;
+        h1 {
+            font-size: 10em;
+            font-family: 'Kaushan Script', cursive;
+        }
+    }
+
+}
+
+// ******* CONTENT OVER SLIDER *********
+.home-content {
+    pointer-events:none;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    padding: 50px 100px 140px 100px;
+    color: #ffffff;
+    div>p,a{
+        pointer-events: auto;
+        cursor: pointer;
+    }
+    .home-content__social a {
+        color: white;
+        padding-left: 15px;
+    }
+}
+ .header-main {
+  left: 45%;
+  position: absolute;
+  z-index: 1;
 }
 
 section {
@@ -13,3 +89,5 @@ section {
   margin: 50px calc(25% - 101px) 50px calc(25% - 101px);
   cursor: pointer;
 }
+
+
